...
        app:layout_constraintEnd_toEndOf="@+id/searchBtn"
        app:layout_constraintHorizontal_bias="0.067"
        app:layout_constraintStart_toStartOf="@+id/searchBtn"
        app:layout_constraintTop_toTopOf="@+id/searchBtn" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#00BFA5"
        app:itemIconTint="@drawable/selector"
        app:itemTextColor="@drawable/selector"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/navigation" />

    <ScrollView
        android:id="@+id/scrollview"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainbackground">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/savedPlacesBtn"
                android:layout_width="match_parent"
                android:layout_height="126dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="24dp"
                android:layout_marginStart="15dp"
...
                android:text="@string/my_saved_places"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/historyBtn"
                android:layout_width="match_parent"
                android:layout_height="126dp"
                android:layout_below="@+id/savedPlacesBtn"
                android:layout_marginTop="24dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
...
