...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".Activities.SignUpActivity">

    <EditText
        android:id="@+id/signUpPassword"
        android:layout_width="342dp"
        android:layout_height="43dp"
        android:ems="10"
        android:hint="@string/create_a_password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
...
        android:text="@string/enter_an_email"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.109"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUpEmail"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/signUpBtn"
        android:layout_width="336dp"
        android:layout_height="48dp"
        android:layout_marginBottom="36dp"
        android:text="@string/sign_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
...
