...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clearHistoryBtn" />

    <Button
        android:id="@+id/logoutBtn"
        android:layout_width="164dp"
        android:layout_height="42dp"
        android:layout_marginTop="64dp"
        android:background="@drawable/activity_profile_white_button"
        android:text="@string/logout"
        app:layout_constraintEnd_toEndOf="parent"
...
        app:itemTextColor="@drawable/selector"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/navigation" />

    <Button
        android:id="@+id/deleteBtn"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginBottom="48dp"
        android:background="@color/red_orange"
        android:text="@string/delete"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavBar"
...
